# BugWarden-Scanner-Pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini
docker/: Dockerfile.base  Dockerfile.echidna  Dockerfile.mythril  Dockerfile.mythril.fast  Dockerfile.slither
docker/scripts/: detect-solc-version.py  setup-workspace.py
docker/wrappers/: echidna-wrapper.py  mythril-wrapper.py  slither-wrapper.py
src/vulnhunter/: __init__.py
src/vulnhunter/cli/: __init__.py  main.py
src/vulnhunter/config/: __init__.py  settings.py
src/vulnhunter/core/: __init__.py  pipeline.py
src/vulnhunter/models/: __init__.py  contract.py  report.py  vulnerability.py
src/vulnhunter/tools/: __init__.py  base.py  docker_wrapper.py  echidna.py  mythril.py  slither.py
tests/: __init__.py
tests/fixtures/echidna/: SimpleTest.sol  TestReentrancy.sol
tests/fixtures/vulnerable/: comprehensive_vulns.sol  reentrancy.sol  simple_overflow.sol
tests/integration/: __init__.py  test_echidna_integration.py  test_full_pipeline.py  test_mythril_integration.py  test_parallel_execution.py  test_slither_integration.py
tests/unit/: __init__.py  test_config.py  test_docker_wrapper.py
